# cuteos

./: .gitignore  Cargo.toml  Makefile
notes/: 0.裸机启动.md
rk3399_tool/push/: push  push.c
rk3399_tool/sd-system/: Readme.md  auto_dd.sh
rk3399_tool/sd-system/gboot/: Cargo.toml  Makefile
rk3399_tool/sd-system/gboot/src/: arch.rs  main.rs
rk3399_tool/sd-system/gboot/src/arch/aarch64/cpu/: cpu.S  mod.rs
rk3399_tool/sd-system/gboot/src/arch/aarch64/exception/: asynchronous.rs  exception.S  mod.rs
rk3399_tool/sd-system/gboot/src/arch/aarch64/interrupt/: gic.rs  interrupt.S  mod.rs
rk3399_tool/sd-system/gboot/src/bsp/: mmio.rs  mod.rs
rk3399_tool/sd-system/gboot/src/bsp/rk/: link.ld  map.rs  mod.rs  rk_timer.rs  rk_uart.rs
rk3399_tool/sd-system/gboot/src/drivers/: console.rs  driver_manager.rs  mod.rs
rk3399_tool/sd-system/gboot/src/drivers/gpio/: grf.rs  mod.rs
rk3399_tool/sd-system/gboot/src/drivers/serial/: mod.rs  uart.rs
rk3399_tool/sd-system/gboot/src/drivers/timer/: mod.rs  timer.rs
rk3399_tool/sd-system/gboot/src/sync/: mod.rs  mutex.rs
rk3399_tool/sd-system/tools/: loaderimage
sd-system/: Readme.md
sd-system/gboot/: Cargo.toml
sd-system/push/: push  push.c
src/: log.rs  main.rs  shell.rs
src/arch/aarch64/: link.ld  mod.rs
src/arch/aarch64/boot/: boot.S  mod.rs
src/arch/aarch64/context/: context.S  mod.rs
src/arch/aarch64/exception/: exception.S  mod.rs
src/bsp/aarch64/: mmio.rs  mod.rs
src/drivers/: mod.rs
src/drivers/console/: mod.rs
src/drivers/irq/: mod.rs
src/drivers/serial/: uart.rs
src/drivers/timer/: basic_timer.rs  mod.rs  system_timer.rs
src/kernel/: mod.rs
src/kernel/process/: mod.rs  process.rs
src/kernel/sched/: mod.rs  round_robin.rs
src/mem/: heap.rs  mod.rs
src/mem/mmu/: mod.rs
src/sync/: mod.rs  mutex.rs
src/utilities/: mod.rs
(+26 files in other folders)
