[package]
name = "gemini-os"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default                 = ["tock-registers"]
board_firefly-rk3399    = ["tock-registers"]
board_raspi3            = ["tock-registers"]
board_raspi4            = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
# Optional dependencies
tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"], optional = true }
volatile = "0.4.4"
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"]}
bitflags = "1.3"
spin = "0.9.2"

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "6.x.x" }

[profile.release]
opt-level = 2
lto = true

[profile.dev]
# more in https://doc.rust-lang.org/cargo/reference/profiles.html
opt-level = 2   
